# nma

./: README.md
examples/4ake/: Makefile  rtb.inp
scripts/: makebloc.pl
src/: CMakeLists.txt  diag_arpack.F  rtb.f90  rtb_mod.F
